# online-chat

./: .gitignore
backend/: .gitignore  Dockerfile  alembic.ini  env.example  pyproject.toml
backend/app/: main.py
backend/app/application/: settings.py
backend/app/application/dto/: attachment_dto.py  conversation_dto.py  message_dto.py  participant_dto.py  user_dto.py
backend/app/application/security/: password_hasher.py
backend/app/application/services/: chat_service.py  user_service.py
backend/app/domain/entities/: attachment.py  conversation.py  message.py  participant.py  user.py
backend/app/domain/enums/: attachment_type.py  conversation_type.py  participant_type.py
backend/app/domain/repositories/: attachment_repository.py  conversation_repository.py  message_repository.py  participant_repository.py  user_repository.py
backend/app/domain/security/: interfaces.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/alembic/: env.py
backend/app/infrastructure/db/models/: models.py  user_models.py
backend/app/infrastructure/repositories_impl/: attachment_repository_impl.py  conversation_repository_impl.py  message_repository_impl.py  participant_repository_impl.py  user_repository_impl.py
backend/app/infrastructure/websocket/: connection_manager.py
backend/app/presentation/api/: attachments.py  conversations.py  messages.py  participants.py  router.py  users.py
backend/app/presentation/dependencies/: auth.py  services.py
backend/app/presentation/websocket/: conversations_ws.py  router.py
frontend/: .env  .gitignore  (+6 more)
(+30 files in other folders)
